Actulizacion de la pagina de login

--- a/Taller_2/login.html
+++ b/Taller_2/login.html
@@ -9,10 +9,10 @@
     <h1>Inicio de sesion</h1>
 
     <!-- logo de la uis -->
-    <img src="../Images/logo_uis.png" alt="logo de la uis" height="200">
+    <img src="Images/logo_uis.png" alt="logo de la uis" height="200">
 
     <!-- logo de html -->
-    <img src="../Images/logo_html5.png" alt="logo html" height="200">
+    <img src="Images/logo_html5.png" alt="logo html" height="200">
 
     <!-- formulario -->
     <form>
@@ -25,6 +25,19 @@
         <!-- label y entrada para la contraseña -->
         <label for="contrasena"> Contraseña: </label>
         <input type="password" id="contrasena" name="contrasena" placeholder="Ingresa la contraseña">
+
+        <br><br>
+        <!-- creando el boton para enviar el formuladio -->
+        <button type="submit">Entrar</button>
     </form>
+
+    <!-- agregando el link para que el usuario restaure la contraseña -->
+    <p>¿Has olvidado la contraseña? haga click <!-- con el traget = "_black" abrimos otra ventana -->
+    <a href="https://www.youtube.com/watch?v=WT-VE9OyAJk" target="_blank">aqui</a> </p>
+
+    <!-- agregando el link de la universidad -->
+    <p> Desarrollado por la 
+    <a href="https://uis.edu.co/es/" target="_blank">Universidad Industrial de Santander</a> </p>
+
 </body>
 </html>
