creacion de la pagina para los datos de usuario

--- a/Taller_2/Lista.html
+++ b/Taller_2/Lista.html
@@ -9,7 +9,7 @@
     <ol>
         <li><b>Formulario</b>
             <ul>
-                <li><a href="#" target="_blank">Datos de usuario</a></li> <!-- link para formulario -->
+                <li><a href="recursos_lista/datos_usuario.html" target="_blank">Datos de usuario</a></li> <!-- link para formulario -->
                 <li><a href="#" target="_blank">Frases celebres de usuario</a></li><!-- link para freses celebres -->
             </ul>
         </li>
