--- a/Taller_2/login.html
+++ b/Taller_2/login.html
@@ -19,7 +19,7 @@
         <!-- label y entrada para el usuario -->
         <br>
         <label for="nombre"> Nombre de usuario: </label>
-        <input type="text" id="nombre" name="nombre" placeholder="Ingresa el usuario" maxlength="50">
+        <input type="text" id="nombre" name="nombre" placeholder="Ingresa el usuario">
         <br><br>
 
         <!-- label y entrada para la contraseña -->
