--- a/Taller_2/login.html
+++ b/Taller_2/login.html
@@ -16,14 +16,14 @@
 
     <!-- formulario -->
     <form>
-        <!-- label y entrada para el usuario -->
+        <!-- entrada para el usuario -->
         <br>
-        <label for="nombre"> Nombre de usuario: </label>
+        Nombre de usuario: 
         <input type="text" id="nombre" name="nombre" placeholder="Ingresa el usuario">
         <br><br>
 
-        <!-- label y entrada para la contraseña -->
-        <label for="contrasena"> Contraseña: </label>
+        <!-- entrada para la contraseña -->
+        Contraseña: 
         <input type="password" id="contrasena" name="contrasena" placeholder="Ingresa la contraseña">
 
         <br><br>
