actualizacion y completado la pagina de datos de usuario

--- a/Taller_2/login.html
+++ b/Taller_2/login.html
@@ -28,7 +28,7 @@
 
         <br><br>
         <!-- creando el boton para enviar el formuladio -->
-        <button type="submit">Entrar</button>
+        <input type="submit" value="Entrar" name="entrar">
     </form>
 
     <!-- agregando el link para que el usuario restaure la contraseña -->
