--- a/Taller_2/recursos_lista/datos_usuario.html
+++ b/Taller_2/recursos_lista/datos_usuario.html
@@ -8,23 +8,23 @@
 <body>
     <h1>Rellena tu CV</h1>
     <form></form>
-        <!-- label e input para nombre -->
-        <label for="nombre">Nombre</label><br>
+        <!-- input para nombre -->
+        Nombre<br>
         <input type="text" id="nombre" name="nombre" placeholder="Ingrese su nombre" style="width: 300px"><br><br>
 
-        <!-- label e iinput para apellidos -->
-        <label for="apellidos">Apellidos</label><br>
+        <!-- input para apellidos -->
+        Apellidos<br>
         <input type="text" id="apellidos" name="apellidos" placeholder="Ingrese sus apellidos" style="width: 300px"><br><br>
 
         <!-- contraseña y su confirmacion -->
-        <label for="contrasena">Contraseña</label><br>
+        Contraseña<br>
         <input type="password" id="contrasena" name="contrasena" placeholder="Ingrese su contraseña" style="width: 300px"><br><br>
 
-        <label for="confirmar">Confirme su contraseña</label><br>
+        Confirme su contraseña<br>
         <input type="password" id="confirmar" name="confirmar" placeholder="Confirme su contraseña" style="width: 300px"><br><br>
 
         <!-- identificacion del usuario -->
-        <label for="identificacino">Identificacion</label><br>
+        Identificacion<br>
         <!-- tipo de identificacion -->
         <select name="tipo_identificacion" id="identificacioon" style="width: 50px;">
             <option>T.I</option>
@@ -34,27 +34,27 @@
         <input type="number" id="numero_identificacion" name="numero_identificacion" placeholder="Ingrese su numero de documentos" style="width: 245px"><br><br>
         
         <!-- redio select sexo -->
-        <label for="sexo">Sexo</label><br>
+        Sexo<br>
         <!-- eleccio masculino -->
         <input type="radio" name="sexo" id="masculino">
-        <label for="masculino">Masculino</label><br>
+        Masculino<br>
         <!-- eleccion femenino -->
         <input type="radio" name="sexo" id="femenino">
-        <label for="femenino">Femenino</label><br><br>
+        Femenino<br><br>
 
         <!-- inclusion de foto -->
-        <label for="incluir_foto">Incluir foto</label><br>
+        Incluir foto<br>
         <input type="file" name="incluir_foto" id="incluir_foto"><br><br>
 
         <input type="checkbox" name="not_idea" id="estudiante">
-        <label for="estudiante">Estudiante</label><br><br>
+        Estudiante<br><br>
 
         <!-- apartado de datos personales -->
         <fieldset>
             <legend>Datos personales</legend><br>
 
             <!-- seleccionando departamento -->
-            <label for="departamento">Departamento</label><br>
+            Departamento<br>
             <select name="departamento" id="departamento" style="width: 150px" >
                 <option>Santander</option>
                 <option>Norte de Santander</option>
@@ -62,16 +62,27 @@
             </select><br><br>
 
             <!-- fecha de nacimiento -->
-            <label for="fecha_nacimiento">Ingrese su fecha de nacimiento</label><br>
+            Ingrese su fecha de nacimiento<br>
             <input type="date" name="fecha_nacimiento" id="fecha_nacimiento"><br><br>
 
             <!-- temas de interes -->
-            <label for="temas_interes">Temas de interes</label><br>
-            <datalist id="temas_interes">
-                <option value="primero"></option>
-                <option value="segundo"></option>
-            </datalist>
+            Temas de interes<br>
+            <select name="temas_interes" id="temas_intres" multiple>
+                <option value="administracion de bases de datos">Administracion de bases de datos</option>
+                <option value="analisis_programacion">Analisis y programacion</option>
+                <option value="arquitectura">Arquitectura</option>
+                <option value="calidad">Calidad</option>
+                <option value="erp_crm">ERP, CRM, Business intelligence</option>
+                <option value="ia">Inteligencia artificial</option>
+                <option value="web">Programacion web</option>
+                <option value="investigacion">Investigacion</option>
+            </select>
         </fieldset>
+        <br>
+        <!-- boton para guardar cambios -->
+        <input type="submit" value="Guardar cambios" name="guardar">
+        <!-- botono para borrar todo -->
+        <input type="reset" value="Borrar los datos introducidos" name="borrar">
     </form>
 
 </body>
