agragando funcionalidad basica de botones en  datos_usuario

--- a/Taller_2/Lista.html
+++ b/Taller_2/Lista.html
@@ -9,19 +9,19 @@
     <ol>
         <li><b>Formulario</b>
             <ul>
-                <li><a href="recursos_lista/datos_usuario.html" target="_blank">Datos de usuario</a></li> <!-- link para formulario -->
-                <li><a href="#" target="_blank">Frases celebres de usuario</a></li><!-- link para freses celebres -->
+                <li><a href="recursos_lista/datos_usuario.html" >Datos de usuario</a></li> <!-- link para formulario -->
+                <li><a href="#">Frases celebres de usuario</a></li><!-- link para freses celebres -->
             </ul>
         </li>
         <li><b>Grillas</b>
             <ul>
-                <li><a href="#" target="_blank">Normal</a></li> <!-- link para grilla normal-->
-                <li><a href="#" target="_blank">Avanzada</a></li><!-- link para grilla avanzada -->
+                <li><a href="#">Normal</a></li> <!-- link para grilla normal-->
+                <li><a href="#">Avanzada</a></li><!-- link para grilla avanzada -->
             </ul>
         </li>
         <li><b>Imagenes</b>
             <ul>
-                <li><a href="#" target="_blank">Lenguajes</a></li> <!-- link para lenguajes-->
+                <li><a href="#">Lenguajes</a></li> <!-- link para lenguajes-->
             </ul>
 
         </li>
