--- a/Taller_2/recursos_lista/datos_usuario.html
+++ b/Taller_2/recursos_lista/datos_usuario.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Rellena tu CV</h1>
-    <form></form>
+    <form id="form_datos" action="../Lista.html">
         <!-- input para nombre -->
         Nombre<br>
         <input type="text" id="nombre" name="nombre" placeholder="Ingrese su nombre" style="width: 300px"><br><br>
