Agregando las frases de usuario

--- a/Taller_2/Lista.html
+++ b/Taller_2/Lista.html
@@ -10,7 +10,7 @@
         <li><b>Formulario</b>
             <ul>
                 <li><a href="recursos_lista/datos_usuario.html" >Datos de usuario</a></li> <!-- link para formulario -->
-                <li><a href="#">Frases celebres de usuario</a></li><!-- link para freses celebres -->
+                <li><a href="recursos_lista/frase.html">Frases celebres de usuario</a></li><!-- link para freses celebres -->
             </ul>
         </li>
         <li><b>Grillas</b>
