--- a/Taller_2/recursos_lista/Lenguajes.html
+++ b/Taller_2/recursos_lista/Lenguajes.html
@@ -119,7 +119,7 @@
     </ul>
     <br/>
     <br/>
-    <h3>Volver al Menú - <a name="Menu" href="Lista.html"> Click Aqui</a>
+    <h3>Volver al Menú - <a name="Menu" href="Taller_2/Lista.html"> Click Aqui</a>
     </h3>    
 </body>
 </html>
