--- a/Taller_2/Lista.html
+++ b/Taller_2/Lista.html
@@ -1,30 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista</title>
 </head>
+
 <body>
     <ol>
         <li><b>Formulario</b>
             <ul>
-                <li><a href="recursos_lista/datos_usuario.html" >Datos de usuario</a></li> <!-- link para formulario -->
-                <li><a href="recursos_lista/frase.html">Frases celebres de usuario</a></li><!-- link para freses celebres -->
+                <li><a href="recursos_lista/datos_usuario.html">Datos de usuario</a></li>
+                <!-- link para formulario -->
+                <li><a href="recursos_lista/frase.html">Frases celebres de usuario</a></li>
+                <!-- link para freses celebres -->
             </ul>
         </li>
         <li><b>Grillas</b>
             <ul>
-                <li><a href="#">Normal</a></li> <!-- link para grilla normal-->
-                <li><a href="#">Avanzada</a></li><!-- link para grilla avanzada -->
+                <li><a href="recursos_lista/grilla_normal.html">Normal</a></li>
+                <!-- link para grilla normal-->
+                <li><a href="recursos_lista/grilla_avanzada.html">Avanzada</a></li>
+                <!-- link para grilla avanzada -->
             </ul>
         </li>
         <li><b>Imagenes</b>
             <ul>
-                <li><a href="#">Lenguajes</a></li> <!-- link para lenguajes-->
+                <li><a href="recursos_lista/Lenguajes.html">Lenguajes</a></li>
+                <!-- link para lenguajes-->
             </ul>
 
         </li>
     </ol>
 </body>
+
 </html>
