actualizacion boton entrar de login

--- a/Taller_2/login.html
+++ b/Taller_2/login.html
@@ -15,7 +15,7 @@
     <img src="Images/logo_html5.png" alt="logo html" height="200">
 
     <!-- formulario -->
-    <for id="form_login">
+    <form action="Lista.html" id="formulario_login">  
         <!-- entrada para el usuario -->
         <br>
         Nombre de usuario: 
