Arrenglando links de algunos lenguajes

--- a/Taller_2/recursos_lista/Lenguajes.html
+++ b/Taller_2/recursos_lista/Lenguajes.html
@@ -26,7 +26,7 @@
             <br/>
             C es un lenguaje de programación (considerado como uno de lo más importantes en la actualidad) con el cual se desarrollan tanto aplicaciones como sistemas operativos a la vez que forma la base de otros lenguajes más actuales como Java, C++ o C#.
             <br/>
-            Visita la<a name="C" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"> Pagina Web</a>
+            Visita la<a name="C" href="https://es.wikipedia.org/wiki/C_(lenguaje_de_programación)" target="_blank"> Pagina Web</a>
         </li>
         <li>
             <h2>Python</h2>
@@ -46,7 +46,7 @@
             <br/>
             Es un lenguaje de programación multiparadigma desarrollado por Microsoft, que evoluciona de la familia de lenguajes C -como su nombre indica- tomando lo mejor de los lenguajes C y C++ y que se asemeja mucho a lenguajes de alto nivel de abstracción como Java y JavaScript.
             <br/>
-            Visita la<a name="C#" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"> Pagina Web</a>
+            Visita la<a name="C#" href="https://es.wikipedia.org/wiki/C_Sharp" target="_blank"> Pagina Web</a>
         </li>
         <li>
             <h2>C++</h2>
@@ -56,7 +56,7 @@
             <br/>
             C++ es un lenguaje de programación orientado a objetos muy potente que evolucionó de la extensión de lenguaje informático “C” y que hoy en día sigue usándose para realizar programación estructurada de alto nivel y rendimiento, como sistemas operativos, videojuegos y aplicaciones en la nube.
             <br/>
-            Visita la<a name="C++" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"> Pagina Web</a>
+            Visita la<a name="C++" href="https://es.wikipedia.org/wiki/C%2B%2B#:~:text=C%2B%2B%20es%20un%20lenguaje,C%2B%2B%20es%20un%20lenguaje%20híbrido." target="_blank"> Pagina Web</a>
         </li>
         <li>
             <h2>Visual Basic .NET</h2>
@@ -74,7 +74,7 @@
             <br/>
             JavaScript es un lenguaje de programación que los desarrolladores utilizan para hacer páginas web interactivas. Desde actualizar fuentes de redes sociales a mostrar animaciones y mapas interactivos, las funciones de JavaScript pueden mejorar la experiencia del usuario de un sitio web.
             <br/>
-            Visita la<a name="Java Escrí" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"> Pagina Web</a>
+            Visita la<a name="Java Escrí" href="https://es.wikipedia.org/wiki/JavaScript" target="_blank"> Pagina Web</a>
         </li>
         <li>
             <h2>PHP</h2>
@@ -104,7 +104,7 @@
             <br/>
             SQL es un lenguaje de consulta, usado como interfaz para comunicarse con bases de datos y realizar operaciones de acceso y manipulación de la información almacenada.
             <br/>
-            Visita la<a name="Sql" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"> Pagina Web</a>
+            Visita la<a name="Sql" href="https://es.wikipedia.org/wiki/JavaScript" target="_blank"> Pagina Web</a>
         </li>
         <li>
             <h2>Ruby</h2>
