Corrigiendo error en el link de sql

--- a/Taller_2/recursos_lista/Lenguajes.html
+++ b/Taller_2/recursos_lista/Lenguajes.html
@@ -104,7 +104,7 @@
             <br/>
             SQL es un lenguaje de consulta, usado como interfaz para comunicarse con bases de datos y realizar operaciones de acceso y manipulación de la información almacenada.
             <br/>
-            Visita la<a name="Sql" href="https://es.wikipedia.org/wiki/JavaScript" target="_blank"> Pagina Web</a>
+            Visita la<a name="Sql" href="https://es.wikipedia.org/wiki/SQL" target="_blank"> Pagina Web</a>
         </li>
         <li>
             <h2>Ruby</h2>
