--- a/Taller_2/recursos_lista/Lenguajes.html
+++ b/Taller_2/recursos_lista/Lenguajes.html
@@ -11,6 +11,7 @@
         <li>
             <h2>Java</h2>
             <img src="Images/Java.png"
+                alt="logo uis"
                 width="200"
                 height="125">
             <br/>
