prueba imagen java

--- a/Taller_2/recursos_lista/Lenguajes.html
+++ b/Taller_2/recursos_lista/Lenguajes.html
@@ -10,7 +10,7 @@
     <ul>
         <li>
             <h2>Java</h2>
-            <img src="Images/Java.png"
+            <img src="..Images/Java.png"
                 alt="logo uis"
                 width="200"
                 height="125">
