--- a/Taller_2/recursos_lista/Lenguajes.html
+++ b/Taller_2/recursos_lista/Lenguajes.html
@@ -10,8 +10,8 @@
     <ul>
         <li>
             <h2>Java</h2>
-            <img src="..Images/Java.png"
-                alt="logo uis"
+            <img src="Taller_2/Images/Java.png"
+                alt="logo de java"
                 width="200"
                 height="125">
             <br/>
