--- a/Taller_2/recursos_lista/Lenguajes.html
+++ b/Taller_2/recursos_lista/Lenguajes.html
@@ -10,10 +10,9 @@
     <ul>
         <li>
             <h2>Java</h2>
-            <img src="Taller_2/Images/Java.png"
+            <img src="Images/Java.png"
                 alt="logo de java"
-                width="200"
-                height="125">
+                height="200">
             <br/>
             Java es un lenguaje de programación multiplataforma orientado a objetos que se ejecuta en miles de millones de dispositivos de todo el mundo. Impulsa aplicaciones, sistemas operativos de smartphones, software empresarial y muchos programas conocidos. A pesar de haber sido eliminado hace más de 20 años, Java es actualmente el lenguaje de programación más popular para los desarrolladores de aplicaciones.
             <br/>
