--- a/Taller_2/recursos_lista/Lenguajes.html
+++ b/Taller_2/recursos_lista/Lenguajes.html
@@ -10,7 +10,7 @@
     <ul>
         <li>
             <h2>Java</h2>
-            <img src="Images/Java.png"
+            <img src="../Images/Java.png"
                 alt="logo de java"
                 height="200">
             <br/>
@@ -108,7 +108,7 @@
         </li>
         <li>
             <h2>Ruby</h2>
-            <img src="Images/ruby-logo.png"
+            <img src="../Images/ruby-logo.png"
                 height="200">
             <br/>
             Ruby es un lenguaje de programación interpretado, reflexivo y orientado a objetos. Combina la sintaxis inspirada en Python y Perl con características orientadas a objetos similares a Smalltak.
