--- a/Taller_2/recursos_lista/Lenguajes.html
+++ b/Taller_2/recursos_lista/Lenguajes.html
@@ -11,7 +11,6 @@
         <li>
             <h2>Java</h2>
             <img src="../Images/Java.png"
-                alt="logo de java"
                 height="200">
             <br/>
             Java es un lenguaje de programación multiplataforma orientado a objetos que se ejecuta en miles de millones de dispositivos de todo el mundo. Impulsa aplicaciones, sistemas operativos de smartphones, software empresarial y muchos programas conocidos. A pesar de haber sido eliminado hace más de 20 años, Java es actualmente el lenguaje de programación más popular para los desarrolladores de aplicaciones.
@@ -20,9 +19,8 @@
         </li>
         <li>
             <h2>C</h2>
-            <img src="Images/C-logo.png"
-                width="184"
-                height="173">
+            <img src="../Images/C-logo.png"
+                height="200">
             <br/>
             C es un lenguaje de programación (considerado como uno de lo más importantes en la actualidad) con el cual se desarrollan tanto aplicaciones como sistemas operativos a la vez que forma la base de otros lenguajes más actuales como Java, C++ o C#.
             <br/>
@@ -30,8 +28,7 @@
         </li>
         <li>
             <h2>Python</h2>
-            <img src="Images/Python-logo.png"
-                width="200"
+            <img src="../Images/Python-logo.png"
                 height="200">
             <br/>
             Python es un lenguaje de programación multiplataforma y de código abierto que puede utilizarse tanto para desarrollo web, creación de software y procesamiento de datos, entre muchos otros propósitos. Esta versatilidad y facilidad para aprenderlo (es ampliamente considerado el lenguaje más sencillo de aprender) lo han convertido en el lenguaje de programación más popular del mundo, según el índice PYPL.
@@ -40,8 +37,7 @@
         </li>
         <li>
             <h2>C#</h2>
-            <img src="Images/c#-logo.png"
-                width="178"
+            <img src="../Images/c#-logo.png"
                 height="200">
             <br/>
             Es un lenguaje de programación multiparadigma desarrollado por Microsoft, que evoluciona de la familia de lenguajes C -como su nombre indica- tomando lo mejor de los lenguajes C y C++ y que se asemeja mucho a lenguajes de alto nivel de abstracción como Java y JavaScript.
@@ -50,9 +46,8 @@
         </li>
         <li>
             <h2>C++</h2>
-            <img src="Images/C++_Logo.png"
-                width="200"
-                height="224">
+            <img src="../Images/C++_Logo.png"
+                height="200">
             <br/>
             C++ es un lenguaje de programación orientado a objetos muy potente que evolucionó de la extensión de lenguaje informático “C” y que hoy en día sigue usándose para realizar programación estructurada de alto nivel y rendimiento, como sistemas operativos, videojuegos y aplicaciones en la nube.
             <br/>
@@ -60,7 +55,8 @@
         </li>
         <li>
             <h2>Visual Basic .NET</h2>
-            <img src="Images/visual-basic.png">
+            <img src="../Images/visual-basic.png"
+                height="200">
             <br/>
             Visual Basic .NET es un lenguaje de programación orientado a objetos que cuenta con los beneficios que le brinda .NET Framework, el modelo de programación diseñado para simplificar la programación de aplicaciones en un entorno sumamente distribuido: Internet.
             <br/>
@@ -68,8 +64,7 @@
         </li>
         <li>
             <h2>JavaScrip</h2>
-            <img src="Images/JavaScript-logo.png"
-                width="200"
+            <img src="../Images/JavaScript-logo.png"
                 height="200">
             <br/>
             JavaScript es un lenguaje de programación que los desarrolladores utilizan para hacer páginas web interactivas. Desde actualizar fuentes de redes sociales a mostrar animaciones y mapas interactivos, las funciones de JavaScript pueden mejorar la experiencia del usuario de un sitio web.
@@ -78,9 +73,8 @@
         </li>
         <li>
             <h2>PHP</h2>
-            <img src="Images/php-logo.png"
-                width="300"
-                height="157">
+            <img src="../Images/php-logo.png"
+                height="200">
             <br/>
             PHP (acrónimo recursivo de PHP: Hypertext Preprocessor) es un lenguaje de código abierto muy popular especialmente adecuado para el desarrollo web y que puede ser incrustado en HTML.
             <br/>
@@ -88,9 +82,8 @@
         </li>
         <li>
             <h2>SWIFT</h2>
-            <img src="Images/swift-logo.png"
-                width="341"
-                height="213">
+            <img src="../Images/swift-logo.png"
+                height="200">
             <br/>
             El lenguaje de programación Swift es el utilizado actualmente para los desarrollos digitales de apps para entornos iOS y macOS. Es decir, que es el lenguaje ideal a la hora de programar una app que deba ser compatible con los dispositivos de la marca Apple.
             <br/>
@@ -98,9 +91,8 @@
         </li>
         <li>
             <h2>SQL</h2>
-            <img src="Images/sql-logo.png"
-                width="450"
-                height="210">
+            <img src="../Images/sql-logo.png"
+                height="200">
             <br/>
             SQL es un lenguaje de consulta, usado como interfaz para comunicarse con bases de datos y realizar operaciones de acceso y manipulación de la información almacenada.
             <br/>
