--- a/Taller_2/recursos_lista/Lenguajes.html
+++ b/Taller_2/recursos_lista/Lenguajes.html
@@ -82,7 +82,7 @@
         </li>
         <li>
             <h2>SWIFT</h2>
-            <img src="../Images/swift-logo.png"
+            <img src="../Images/swift-logo.jpg"
                 height="200">
             <br/>
             El lenguaje de programación Swift es el utilizado actualmente para los desarrollos digitales de apps para entornos iOS y macOS. Es decir, que es el lenguaje ideal a la hora de programar una app que deba ser compatible con los dispositivos de la marca Apple.
