--- a/Taller_2/recursos_lista/Lenguajes.html
+++ b/Taller_2/recursos_lista/Lenguajes.html
@@ -37,7 +37,7 @@
         </li>
         <li>
             <h2>C#</h2>
-            <img src="../Images/c#-logo.png"
+            <img src="../Images/csharp-logo.png"
                 height="200">
             <br/>
             Es un lenguaje de programación multiparadigma desarrollado por Microsoft, que evoluciona de la familia de lenguajes C -como su nombre indica- tomando lo mejor de los lenguajes C y C++ y que se asemeja mucho a lenguajes de alto nivel de abstracción como Java y JavaScript.
