--- a/Taller_3/usercss.html
+++ b/Taller_3/usercss.html
@@ -18,7 +18,7 @@
         <input class="controls" type="text" name="nombres" id="nombres" placeholder="Nombre">
         <input class="controls" type="text" name="apellidos" id="apellidos" placeholder="Apellido">
 
-        <select name="tipo_doc" id="type_cod" placeholder="Tipo de documento">
+        <select name="tipo_doc" class="controls" id="type_cod" placeholder="Tipo de documento">
         
         <option value="Elegir" id="Elegir">Tipo de Documento</option>
         <option value="C.C" id="c.c">C.C</option>
