--- a/Taller_4/register.html
+++ b/Taller_4/register.html
@@ -21,13 +21,13 @@
         <label class="form-label" for="nombres">Nombre</label>
         <input class="controls" type="text" name="nombres" id="nombres">
         <p class="porDefecto" id="nombresError">Nombre invalido digite de nuevo</p>
-        <p class="porDefecto" id="nombresCorrecto">check</p>
+        <p class="porDefecto" id="nombresCorrecto">correcto</p>
         <br>
 
         <label class="form-label" for="apellidos">Apellido</label>
         <input class="controls" type="text" name="apellidos" id="apellidos">
         <p class="porDefecto" id="apellidosError">apellidos invalidos digite de nuevo</p>
-        <p class="porDefecto" id="apellidosCorrecto">check</p>
+        <p class="porDefecto" id="apellidosCorrecto">correcto</p>
         <br>
 
         <label class="form-label" for="pais">Pais</label>
@@ -276,44 +276,44 @@
         <label class="form-label" for="direccion">Dirección</label>
         <input class="controls" type="text" name="direccion" id="direccion">
         <p class="porDefecto" id="direccionError">Direccion invalida digite de nuevo</p>
-        <p class="porDefecto" id="direccionCorrecto">check</p>
+        <p class="porDefecto" id="direccionCorrecto">correcto</p>
         <br>
 
         <label class="form-label" for="usuario">Usuario</label>
         <input class="controls" type="text" name="usuario" id="usuario">
         <p class="porDefecto" id="usuarioError">Usuario invalido digite de nuevo</p>
-        <p class="porDefecto" id="usuarioCorrecto">check</p>
+        <p class="porDefecto" id="usuarioCorrecto">correcto</p>
         <br>
 
         <label class="form-label" for="correo">Correo</label>
         <input class="controls" type="email" name="correo" id="correo">
         <p class="porDefecto" id="correoError">Correo invalido digite de nuevo</p>
-        <p class="porDefecto" id="correoCorrecto">check</p>
+        <p class="porDefecto" id="correoCorrecto">correcto</p>
         <br>
 
         <label class="form-label" for="celular">Celular</label>
         <input class="controls" type="text" name="celular" id="celular">
         <p class="porDefecto" id="celularError">Numero de celular invalido</p>
-        <p class="porDefecto" id="celularCorrecto">check</p>
+        <p class="porDefecto" id="celularCorrecto">correcto</p>
         <br>
 
         <label class="form-label" for="contraseñas">Contraseña</label>
         <input class="controls" type="password" name="contraseñas" id="contraseñas">
         <p class="porDefecto" id="contraseñasError">Contraseña insegura digite de nuevo</p>
-        <p class="porDefecto" id="contraseñasCorrecto">check</p>
+        <p class="porDefecto" id="contraseñasCorrecto">correcto</p>
         <br>
 
         <label class="form-label" for="confirmarps">Confirmar contraseña</label>
         <input class="controls" type="password" name="confirmarps" id="confirmarps">
         <p class="porDefecto" id="confirmarpsError">La contraseña no coincide</p>
-        <p class="porDefecto" id="confirmarpsCorrecto">check</p>
+        <p class="porDefecto" id="confirmarpsCorrecto">correcto</p>
         <br>
 
         <input type="radio" id="gustos" name="gustos" value="gustoscarro">
         <label for="gustos">click aqui si te gustan los carros</label><br>
 
         <div class="formGustos" id="formGustos">
-            <h3>¿Que tipo de carro te gustaria?</h3>
+            <h3>¿Que tipo de carro te gustaría?</h3>
             <form>
                 <select class="controls" id="movidoa">
 
@@ -369,7 +369,7 @@
                 <input class="controls" type="text" name="modelo" id="modelo">
                 <br>
 
-                <h3>¿Cuanto estarias dispuesto a pagar?</h3>
+                <h3>¿Cuánto pagarías?</h3>
                 <label for="range" class="form-label">Valor en Dolares</label>
                 <br>
                 <br>
