--- a/taller-5/registro.html
+++ b/taller-5/registro.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro Usuario</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/dataTables.bootstrap4.min.css">
+
     <link rel="stylesheet" href="registro.css">>
     <link rel="stylesheet" href="validar.css">
     <link rel="stylesheet" href="slider.css">
@@ -94,7 +98,7 @@
         </div>
 
         <div class="grilla" id="grilla">
-            <table id="datatable_users" class="table table-striped">
+            <table id="datatable_users" class="table table-striped table-bordered" >
                 <thead>
                     <tr>
                         <th class="centered">#</th>
@@ -108,6 +112,11 @@
             </table>
         </div>
     </div>
+
+    <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
+    <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.13.6/js/dataTables.bootstrap4.min.js"></script>
+    
 
     <script src="validar.js"></script>
     <script src="desplegar.js"></script>
