llenado de tabla con AJAX

--- a/taller-5/registro.html
+++ b/taller-5/registro.html
@@ -11,7 +11,6 @@
 
     <link rel="stylesheet" href="registro.css">>
     <link rel="stylesheet" href="validar.css">
-    <link rel="stylesheet" href="slider.css">
 </head>
 
 <body>
@@ -98,20 +97,21 @@
         </div>
 
         <div class="grilla" id="grilla">
-            <table id="datatable_users" class="table table-striped table-bordered" >
+            <table id="tabla_usuarios" class="table table-striped table-bordered">
                 <thead>
                     <tr>
-                        <th class="centered">#</th>
-                        <th class="centered">Name</th>
-                        <th class="centered">Email</th>
-                        <th class="centered">City</th>
-                        <th class="centered">Company</th>
+                        <th class="centered">id</th>
+                        <th class="centered">Nombre</th>
+                        <th class="centered">Usuario</th>
+                        <th class="centered">Correo</th>
+                        <th class="centered">Telefono</th>
                     </tr>
                 </thead>
-                <tbody id="tableBody_users"></tbody>
+                <tbody id="datos_tabla"></tbody>
             </table>
         </div>
     </div>
+
 
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
     <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
@@ -120,7 +120,7 @@
 
     <script src="validar.js"></script>
     <script src="desplegar.js"></script>
-    <script src="main.js"></script>
+    <script src="crear_tabla.js"></script>
     <script src="fecha.js"></script>
     
 </body>
